src/objects/TestCommendationsData__c.object
<CustomObject>
    <description>Automatically generated by EscapeNotes. Remove this text to write protect from EscapeNotes.</description>
    <fields>
        <fullName>AttachmentXNRTF__c</fullName>
        <label>Attachment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuthorFirstName__c</fullName>
        <label>AuthorFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorLastName__c</fullName>
        <label>AuthorLastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorTitle__c</fullName>
        <label>AuthorTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientContractNo__c</fullName>
        <label>ClientContractNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code330__c</fullName>
        <label>Code330</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommDate__c</fullName>
        <label>CommDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComposeDate__c</fullName>
        <label>ComposeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOTOContractNum__c</fullName>
        <label>DOTOContractNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNumber__c</fullName>
        <label>DoNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocAuthor__c</fullName>
        <label>DocAuthor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETEmpNo__c</fullName>
        <label>ETEmpNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETName__c</fullName>
        <label>ETName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EditDates__c</fullName>
        <label>EditDates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LetterText__c</fullName>
        <label>LetterText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesFiles__c</fullName>
        <label>Notes Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PastAuthors__c</fullName>
        <label>PastAuthors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastEditDates__c</fullName>
        <label>PastEditDates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>ProjectNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <label>REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicaId__c</fullName>
        <label>Replica Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SName__c</fullName>
        <label>Legacy Names of Staff Mentioned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaveOptions__c</fullName>
        <label>SaveOptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvCode__c</fullName>
        <label>StateProvCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProv__c</fullName>
        <label>StateProv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimesModified__c</fullName>
        <label>TimesModified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueDocNumber__c</fullName>
        <label>UniqueDocNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValCheck__c</fullName>
        <label>ValCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestCommendations Data</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestCommendations Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>